# 3D-Motion-system

./: README.md  pyproject.toml  requirements.txt
src/motion_proto/: app.py  preprocess.py
src/motion_proto/bvh/: __init__.py  kinematics.py  loader.py  math3d.py  types.py
src/motion_proto/presets/: axis_presets.json  skeleton_map.json
